// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListButton correctly renders default markup 1`] = `
<button
  className="btn btn--list movie-card__button"
  onClick={[Function]}
  type="button"
>
  <svg
    height={20}
    viewBox="0 0 19 20"
    width={19}
  >
    <use
      xlinkHref="#add"
    />
  </svg>
  <span>
    My list
  </span>
</button>
`;

exports[`ListButton correctly renders in list markup 1`] = `
<button
  className="btn btn--list movie-card__button"
  onClick={[Function]}
  type="button"
>
  <svg
    height={14}
    viewBox="0 0 18 14"
    width={18}
  >
    <use
      xlinkHref="#in-list"
    />
  </svg>
  <span>
    My list
  </span>
</button>
`;
